resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_size_info-18.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---
union resym_test::BitFieldsTest4 {
  struct {
    /* 0x0000 */ uint16_t b1 : 1; /* BitPos=0 */
    /* 0x0000 */ uint16_t b2 : 5; /* BitPos=1 */
    /* 0x0000 */ uint16_t b3 : 10; /* BitPos=6 */
  };
};
